[gd_scene load_steps=3 format=3 uid="uid://bq5v6tam802l1"]

[ext_resource type="Script" uid="uid://du62n4v3so2hb" path="res://addons/gemini_ai_plugin/gemini_handler.gd" id="1_6hf8z"]
[ext_resource type="Script" uid="uid://p2og8rhv74m8" path="res://addons/gemini_ai_plugin/gemini_ai_dock.gd" id="2_ugd9c"]

[node name="GeminiAIDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.136
offset_right = 0.199951
offset_bottom = -0.0560303
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_ugd9c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ApiKeyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ApiKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/ApiKeyContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "API Key:"
vertical_alignment = 1

[node name="ApiKeyEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ApiKeyContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Gemini API Key"
secret = true

[node name="AutoCorrectContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AutoCorrectCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/AutoCorrectContainer"]
layout_mode = 2
text = "Automatic Correction"

[node name="AutoCorrectLabel" type="Label" parent="MarginContainer/VBoxContainer/AutoCorrectContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Detect and correct errors in ALL project scripts"
vertical_alignment = 1

[node name="PromptLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Describe the script you need:"
vertical_alignment = 1

[node name="PromptTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Example: Create a script for a player that moves with WASD and jumps with SPACE"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate Script"

[node name="CorrectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Correct Errors"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Esperando inicializaci√≥n..."
vertical_alignment = 1
autowrap_mode = 2

[node name="GeminiHandler" type="Node" parent="."]
script = ExtResource("1_6hf8z")
